# alveus-idle-cli

./: .gitignore  AGENTS.md  Cargo.toml  README.md  ROADMAP.md  concept.md  justfile  rust-toolchain.toml  save.ron
.cargo/: config_fast_builds.toml
.github/workflows/: release.yaml
assets/maps/interiors/: interiors.tsx  nutrition_house_interior.tmx  push_pop_enclosure_interior.tmx
assets/maps/overview/: Tiles.tsx  alveus-idle.tiled-project  map.tmx  objects.tsx  tiled_types.json
crates/alveus-animals/: Cargo.toml
crates/alveus-animals/src/: lib.rs
crates/alveus-app/: Cargo.toml
crates/alveus-app/src/: lib.rs
crates/alveus-asset-tracking/: Cargo.toml
crates/alveus-audio/: Cargo.toml
crates/alveus-audio/src/: lib.rs
crates/alveus-cleaning/: Cargo.toml
crates/alveus-cleaning/src/: lib.rs
crates/alveus-collision/: Cargo.toml
crates/alveus-collision/src/: lib.rs
crates/alveus-command/: Cargo.toml
crates/alveus-command/src/: lib.rs
crates/alveus-components/: Cargo.toml
crates/alveus-components/src/: lib.rs
crates/alveus-configs/: Cargo.toml  README.md  build.rs
crates/alveus-configs/src/: lib.rs
crates/alveus-content/: Cargo.toml
crates/alveus-content/src/: lib.rs
crates/alveus-headless/: Cargo.toml
crates/alveus-headless/src/: camera.rs  command.rs  input.rs  lib.rs  reflect.rs  stdio.rs
crates/alveus-hud/: Cargo.toml
crates/alveus-hud/src/: lib.rs
crates/alveus-input/: Cargo.toml
crates/alveus-input/src/: lib.rs
crates/alveus-interaction/: Cargo.toml
crates/alveus-interaction/src/: lib.rs
crates/alveus-menus/: Cargo.toml
crates/alveus-menus-models/: Cargo.toml
crates/alveus-menus-models/src/: lib.rs
crates/alveus-menus/src/: care_item_picker.rs  credits.rs  lib.rs  list_menu.rs  main_menu.rs  overlay_menu.rs  pause.rs  settings.rs  standalone_menu.rs
crates/alveus-reflect/: Cargo.toml
crates/alveus-reflect/src/: lib.rs
crates/alveus-screens/: Cargo.toml
crates/alveus-screens/src/: gameplay.rs  lib.rs  loading.rs  splash.rs  title.rs
crates/alveus-stats/: Cargo.toml
crates/alveus-stats/src/: lib.rs
crates/alveus-theme/: Cargo.toml
crates/alveus-theme/src/: interaction.rs  lib.rs  widget.rs
crates/alveus-types/: Cargo.toml
crates/alveus-types/src/: animal_id.rs  care_menu_id.rs  chore_id.rs  enclosure_id.rs  item_id.rs  lib.rs  stat.rs  tile.rs
crates/alveus-world/: Cargo.toml
crates/alveus-world/src/: camera.rs  entrance.rs  interiors.rs  level.rs  lib.rs  movement.rs  player.rs  room.rs  toast.rs
design/: README.md  ambassadors.md  copy-notes.md  design.md  rooms.md
design/data/: animals.json  economy.json  events.json  items.json  overview_map.json
design/rooms/: hq_office.json  nutrition_house.json  pasture.json  push_pop_enclosure.json  studio.json
design/schemas/: animal.schema.json  economy.schema.json  event.schema.json  item.schema.json  overview_map.schema.json  room.schema.json
docs/concepts/: README.md
plans/: 001-unify-stat-values-and-deltas.md  README.md  epic-1-care-feedback-satchel-card.md  epic-1-care-restore-newtypes.md
scripts/: _run_all_python_validation.sh  brp_driver.py  headless_care_feedback_audit.py  headless_care_framework_smoke.py  headless_clean_push_pop_demo.py  headless_feed_push_pop_demo.py  headless_nutrition_house_demo.py  headless_playtest.py  headless_polly_care_demo.py  headless_satchel_card_clarity_audit.py  headless_typepath_smoke.py  headless_ui_screenshot_smoke.py
src/: animals.rs  cleaning.rs  collision.rs  components.rs  content.rs  dev_tools.rs  hud.rs  interaction.rs  lib.rs  main.rs  stats.rs
src/demo/: animation.rs  camera.rs  entrance.rs  interiors.rs  level.rs  mod.rs  movement.rs  player.rs  room.rs  toast.rs
src/headless/: camera.rs  command.rs  mod.rs  reflect.rs  stdio.rs
src/menus/: main.rs  mod.rs
src/screens/: gameplay.rs  loading.rs  mod.rs  splash.rs
tests/: brp_tests.rs  care_interaction_tests.rs  cleaning_brp_tests.rs  cleaning_tests.rs  collision_masks_integration.rs  command_tests.rs  interaction_tests.rs  loading_failure_test.rs  loading_transition_test.rs  nutrition_house_flow_test.rs  play_crash_test.rs  push_pop_flow_test.rs  reflect_registry_tests.rs  stat_save_compat_tests.rs  state_ownership_tests.rs  stats_tests.rs  stdio_tests.rs  tiled_care_stat_test.rs
tests/common/: mod.rs
tools/: gen_interiors.py  gen_overview_assets.py
