[workspace]
resolver = "2"
members = [
    ".",
    "crates/alveus-types",
    "crates/alveus-configs",
    "crates/alveus-app",
    "crates/alveus-components",
    "crates/alveus-content",
    "crates/alveus-asset-tracking",
    "crates/alveus-audio",
    "crates/alveus-theme",
    "crates/alveus-collision",
    "crates/alveus-stats",
    "crates/alveus-cleaning",
    "crates/alveus-interaction",
    "crates/alveus-animals",
    "crates/alveus-world",
    "crates/alveus-screens",
    "crates/alveus-menus",
    "crates/alveus-hud",
    "crates/alveus-command",
    "crates/alveus-input",
    "crates/alveus-reflect",
    "crates/alveus-headless",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Bernardo António Borda d'Água <berna.agua@protonmail.com>"]

[workspace.dependencies]
# Internal crates
alveus-types = { path = "crates/alveus-types" }
alveus-configs = { path = "crates/alveus-configs" }
alveus-app = { path = "crates/alveus-app" }
alveus-components = { path = "crates/alveus-components" }
alveus-content = { path = "crates/alveus-content" }
alveus-asset-tracking = { path = "crates/alveus-asset-tracking" }
alveus-audio = { path = "crates/alveus-audio" }
alveus-theme = { path = "crates/alveus-theme" }
alveus-collision = { path = "crates/alveus-collision" }
alveus-stats = { path = "crates/alveus-stats" }
alveus-cleaning = { path = "crates/alveus-cleaning" }
alveus-interaction = { path = "crates/alveus-interaction" }
alveus-animals = { path = "crates/alveus-animals" }
alveus-world = { path = "crates/alveus-world" }
alveus-screens = { path = "crates/alveus-screens" }
alveus-menus = { path = "crates/alveus-menus" }
alveus-hud = { path = "crates/alveus-hud" }
alveus-command = { path = "crates/alveus-command" }
alveus-input = { path = "crates/alveus-input" }
alveus-reflect = { path = "crates/alveus-reflect" }
alveus-headless = { path = "crates/alveus-headless" }

# External crates
bevy = { version = "0.19", default-features = true }
bevy_ecs = { version = "0.19", default-features = false, features = ["bevy_reflect"] }
bevy_reflect = "0.19"
bevy_ecs_tiled = { version = "0.13", default-features = false, features = ["user_properties", "png"] }
bevy_tweening = "0.16.0"
itertools = "0.14"
rand = "0.10.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.150"
ron = "0.12.1"
moonshine-save = "0.7"
async-channel = "2"
phf = { version = "0.11", default-features = false }
phf_shared = "0.11"
phf_codegen = "0.11"

[workspace.lints.rust]
# Mark `bevy_lint` as a valid `cfg`, as it is set when the Bevy linter runs.
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(bevy_lint)"] }

[workspace.lints.clippy]
# Bevy supplies arguments to systems via dependency injection, so it's natural for systems to
# request more than 7 arguments, which would undesirably trigger this lint.
too_many_arguments = "allow"
# Queries may access many components, which would undesirably trigger this lint.
type_complexity = "allow"
# Make sure macros use their standard braces, such as `[]` for `bevy_ecs::children!`.
nonstandard_macro_braces = "warn"

[package]
name = "alveus-idle-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
default-run = "alveus-idle-cli"

[dependencies]
alveus-types.workspace = true
alveus-configs.workspace = true
alveus-app.workspace = true
alveus-components.workspace = true
alveus-content.workspace = true
alveus-asset-tracking.workspace = true
alveus-audio.workspace = true
alveus-theme.workspace = true
alveus-collision.workspace = true
alveus-stats.workspace = true
alveus-cleaning.workspace = true
alveus-interaction.workspace = true
alveus-animals.workspace = true
alveus-world.workspace = true
alveus-screens.workspace = true
alveus-menus.workspace = true
alveus-hud.workspace = true
alveus-command.workspace = true
alveus-input.workspace = true
alveus-reflect.workspace = true
alveus-headless.workspace = true
bevy = { workspace = true, features = ["pan_camera", "debug"] }

[dev-dependencies]
bevy_ecs_tiled.workspace = true
moonshine-save.workspace = true
rand.workspace = true
ron.workspace = true
serde_json.workspace = true
async-channel.workspace = true

[features]
# Default to a native dev build.
default = ["dev_native", "tiled-render"]
tiled-render = ["alveus-collision/tiled-render", "alveus-world/tiled-render"]
tiled-asset-tests = []
remote = ["alveus-command/remote", "alveus-headless/remote"]
cli = ["alveus-headless/cli"]
headless = ["remote", "cli"]
dev = [
    # Improve compile times for dev builds by linking Bevy as a dynamic library.
    "bevy/dynamic_linking",
    "bevy/bevy_dev_tools",
    "bevy/bevy_ui_debug",
    # Improve error messages coming from Bevy
    "bevy/track_location",
]
dev_native = [
    "dev",
    # Enable asset hot reloading for native dev builds.
    "bevy/file_watcher",
    # Enable embedded asset hot reloading for native dev builds.
    "bevy/embedded_watcher",
]

[lints]
workspace = true

[[bin]]
name = "alveus-idle-cli"
path = "src/main.rs"

[[bin]]
name = "gen_tiled_types"
path = "src/bin/gen_tiled_types.rs"

[package.metadata.bevy_cli.release]
# Disable dev features for release builds.
default-features = false

[package.metadata.bevy_cli.web]
# Disable native features for web builds.
default-features = false

[package.metadata.bevy_cli.web.dev]
features = ["dev"]

[package.metadata.bevy_lint]
# panicking_methods = "deny"
# pedantic = "warn"

# Compile with Performance Optimizations:
# <https://bevyengine.org/learn/quick-start/getting-started/setup/#compile-with-performance-optimizations>

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Remove expensive debug assertions due to <https://github.com/bevyengine/bevy/issues/14291>
[profile.dev.package.wgpu-types]
debug-assertions = false

[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# This profile will be used by `bevy run web` automatically.
[profile.web-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"

# Optimize for build time in CI.
[profile.ci]
inherits = "dev"
opt-level = 0
debug = "line-tables-only"
codegen-units = 4

[profile.ci.package."*"]
opt-level = 0

[[test]]
name = "collision_masks_integration"
required-features = ["tiled-asset-tests"]
