[package]
name = "alveus-animals"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Animal NPC wandering and movement for alveus-idle"

[dependencies]
bevy = { workspace = true }
rand.workspace = true
alveus-types.workspace = true
alveus-content.workspace = true
alveus-components.workspace = true
alveus-collision.workspace = true
alveus-stats.workspace = true
alveus-app.workspace = true

[lints]
workspace = true
