[package]
name = "alveus-collision"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Static collision masks from Tiled assets and save-backed dynamic blocked tiles for alveus-idle"

[dependencies]
bevy = { workspace = true }
bevy_ecs_tiled.workspace = true
moonshine-save.workspace = true
rand.workspace = true
alveus-types.workspace = true
alveus-app.workspace = true
alveus-components.workspace = true
alveus-content.workspace = true

[features]
tiled-render = ["bevy_ecs_tiled/render"]

[lints]
workspace = true
