[package]
name = "alveus-command"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Canonical semantic game commands and shared action dispatch for alveus-idle"

[dependencies]
bevy.workspace = true
alveus-app.workspace = true
alveus-types.workspace = true
alveus-components.workspace = true
alveus-menus-models.workspace = true
alveus-interaction.workspace = true
alveus-stats.workspace = true
alveus-world.workspace = true
alveus-screens.workspace = true

[features]
remote = ["bevy/bevy_remote"]

[lints]
workspace = true
