[package]
name = "alveus-components"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Shared ECS components, markers, and cross-feature state for alveus-idle"

[dependencies]
bevy = { workspace = true }
alveus-types.workspace = true
alveus-configs.workspace = true

[lints]
workspace = true
