[package]
name = "alveus-configs"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Static game-design tables (poop configs, animal placements, items) and cleaning math for alveus-idle"

[dependencies]
alveus-types.workspace = true
phf.workspace = true

[build-dependencies]
alveus-types.workspace = true
phf_codegen.workspace = true

[lints]
workspace = true
