[package]
name = "alveus-configs"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Canonical gameplay numbers (stats, rooms, items, cleaning) for alveus-idle"

[dependencies]
alveus-types.workspace = true
phf.workspace = true

[build-dependencies]
alveus-types.workspace = true
phf_codegen.workspace = true

[lints]
workspace = true
