[package]
name = "alveus-headless"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Windowless rendering and BRP transports for alveus-idle"

[dependencies]
bevy = { workspace = true }
async-channel = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
alveus-world.workspace = true
alveus-command.workspace = true
alveus-reflect.workspace = true

[features]
remote = ["bevy/bevy_remote"]
cli = ["remote", "dep:async-channel", "dep:serde_json"]

[lints]
workspace = true
