[package]
name = "alveus-hud"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "In-game stats/interaction HUD overlay for alveus-idle"

[dependencies]
bevy = { workspace = true }
alveus-types.workspace = true
alveus-app.workspace = true
alveus-components.workspace = true
alveus-content.workspace = true
alveus-cleaning.workspace = true
alveus-interaction.workspace = true
alveus-stats.workspace = true

[lints]
workspace = true
