[package]
name = "alveus-menus"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Main/pause/settings/credits menus for alveus-idle"

[dependencies]
bevy = { workspace = true }
alveus-app.workspace = true
alveus-menus-models.workspace = true
alveus-asset-tracking.workspace = true
alveus-audio.workspace = true
alveus-collision.workspace = true
alveus-theme.workspace = true
alveus-components.workspace = true
alveus-configs.workspace = true
alveus-types.workspace = true
alveus-command.workspace = true
alveus-interaction.workspace = true

[lints]
workspace = true
