[package]
name = "alveus-stats"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Animal/enclosure stats, decay, upkeep, and save/load for alveus-idle"

[dependencies]
bevy = { workspace = true }
moonshine-save.workspace = true
rand.workspace = true
ron.workspace = true
alveus-types.workspace = true
alveus-configs.workspace = true
alveus-components.workspace = true
alveus-content.workspace = true
alveus-collision.workspace = true
alveus-app.workspace = true

[lints]
workspace = true
