[package]
name = "alveus-theme"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Reusable UI widgets and theming for alveus-idle"

[dependencies]
bevy = { workspace = true }
alveus-asset-tracking.workspace = true
alveus-audio.workspace = true

[lints]
workspace = true
