[package]
name = "alveus-types"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Shared game identifiers and lookup-key types for alveus-idle"

[dependencies]
bevy_ecs.workspace = true
bevy_reflect.workspace = true
moonshine-save.workspace = true
phf_shared.workspace = true
serde.workspace = true

[lints]
workspace = true
